create direct list fragment and chat adapter in process